# ElRepo

./: .gitignore  CMakeLists.txt  README.md
FileSystem/: File.config  Fileconfig  makefile
FileSystem/src/: FileSystem.c  Funciones.c  Funciones.h  archivos.c  archivos.h  buscar.c  buscar.h  hiloClientes.c  hiloClientes.h  hiloConsola.c  hiloConsola.h  hiloMensajes.c  hiloMensajes.h  hiloSelect.c  hiloSelect.h  manejoArchivos.c  manejoArchivos.h  operaciones.c  operaciones.h
example/: CMakeLists.txt  Test  client.c  listaMemoria.c  listaMetadata.c  makefile  pthread.c  pthreadServer.c  server.c  serverMemoria.c
example/gossping/: LogS  memoria.c
example/gossping/MP/: LogS  memoria.c  memoriaConf.config
example/gossping/MS/: LogS  mem  memoriaConf.config
funcionesCompartidas/funcionesCompartidas/: API.c  API.h  listaMemoria.c  listaMemoria.h  listaMetadata.c  listaMetadata.h
kernel/: kernel.config  makefile  script.lql
kernel/src/: consola.c  consola.h  load_config.c  load_config.h  main.c  planificador.c  planificador.h  threadMetadata.c  threadMetadata.h  threadPoolMemoria.c  threadPoolMemoria.h
memoria/: memoria.c
memoria/src/: memoria.c
