cmake_minimum_required(VERSION 3.13)
project(Kernel C)

set(CMAKE_C_STANDARD 11)
set(PATH_KERNEL "./kernel/src")
set(PATH_FUNCIONES_COMPARTIDAS "./funcionesCompartidas/funcionesCompartidas")
FILE(GLOB FILE_KERNEL ${PATH_KERNEL}/*.c)
FILE(GLOB FILE_FUNCIONES_COMPARTIDAS ${PATH_FUNCIONES_COMPARTIDAS}/*.c)
add_executable(Kernel ${FILE_KERNEL} ${FILE_FUNCIONES_COMPARTIDAS})
target_link_libraries(Kernel -lcommons -lcompartidas)
